added remaining commands. added tasks (and renamed to services). added annotations. updated script to use typescript. added config files.